# wavplusmp3

./: .gitignore  AUTHORS  LICENSE  README.md  configure.ac
centos7/src/: wavplusmp3.py  wavplusmp3bitrate.ui
src/: Makefile.am  TODO  wavplusmp3.py  wavplusmp3.py~  wavplusmp3.ui  wavplusmp3.ui~  wavplusmp3bitrate.ui  wavplusmp3file.py  wavplusmp3file.ui
